; ModuleID = '/home/carl/AnghaBench/glfw/src/extr_x11_window.c_enableCursor.c'
source_filename = "/home/carl/AnghaBench/glfw/src/extr_x11_window.c_enableCursor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { %struct.TYPE_8__ }
%struct.TYPE_8__ = type { i32, i32, i32, i32* }
%struct.TYPE_9__ = type { i64 }

@_glfw = common dso_local global %struct.TYPE_10__ zeroinitializer, align 8
@CurrentTime = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_9__*)* @enableCursor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @enableCursor(%struct.TYPE_9__* %0) #0 {
  %2 = alloca %struct.TYPE_9__*, align 8
  store %struct.TYPE_9__* %0, %struct.TYPE_9__** %2, align 8
  %3 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %4 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %9 = call i32 @disableRawMouseMotion(%struct.TYPE_9__* %8)
  br label %10

10:                                               ; preds = %7, %1
  store i32* null, i32** getelementptr inbounds (%struct.TYPE_10__, %struct.TYPE_10__* @_glfw, i32 0, i32 0, i32 3), align 8
  %11 = load i32, i32* getelementptr inbounds (%struct.TYPE_10__, %struct.TYPE_10__* @_glfw, i32 0, i32 0, i32 2), align 8
  %12 = load i32, i32* @CurrentTime, align 4
  %13 = call i32 @XUngrabPointer(i32 %11, i32 %12)
  %14 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %15 = load i32, i32* getelementptr inbounds (%struct.TYPE_10__, %struct.TYPE_10__* @_glfw, i32 0, i32 0, i32 1), align 4
  %16 = load i32, i32* getelementptr inbounds (%struct.TYPE_10__, %struct.TYPE_10__* @_glfw, i32 0, i32 0, i32 0), align 8
  %17 = call i32 @_glfwPlatformSetCursorPos(%struct.TYPE_9__* %14, i32 %15, i32 %16)
  %18 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %19 = call i32 @updateCursorImage(%struct.TYPE_9__* %18)
  ret void
}

declare dso_local i32 @disableRawMouseMotion(%struct.TYPE_9__*) #1

declare dso_local i32 @XUngrabPointer(i32, i32) #1

declare dso_local i32 @_glfwPlatformSetCursorPos(%struct.TYPE_9__*, i32, i32) #1

declare dso_local i32 @updateCursorImage(%struct.TYPE_9__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
